pequeños cambios a Capítulo_5.2

--- a/Capitulo_5.2_Seaborn.ipynb
+++ b/Capitulo_5.2_Seaborn.ipynb
@@ -184,17 +184,7 @@
    },
    "outputs": [],
    "source": [
-    "sns.set_style(\"dark\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
+    "sns.set_style(\"dark\")\n",
     "sinplot()"
    ]
   },
@@ -206,17 +196,7 @@
    },
    "outputs": [],
    "source": [
-    "sns.set_style(\"white\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
+    "sns.set_style(\"white\")\n",
     "sinplot()"
    ]
   },
@@ -462,14 +442,14 @@
    "source": [
     "Similarly (although it might be less useful), you can temporarily control the scale of figures nested under a `with` statement.\n",
     "\n",
-    "Both the style and the context can be quickly configured with the `set` function. This function also sets the default color palette, but that will be covered in more detail in the `next section <palette_tutorial>` of the tutorial."
+    "Both the style and the context can be quickly configured with the `set` function. This function also sets the default color palette, but that will be covered in more detail in the next section of the tutorial."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Choosing color palettes"
+    "# Choosing color palettes"
    ]
   },
   {
@@ -491,19 +471,6 @@
    },
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
     "sns.set(rc={\"figure.figsize\": (6, 6)})\n",
     "np.random.seed(sum(map(ord, \"palettes\")))"
    ]
@@ -514,24 +481,24 @@
     "raw_mimetype": "text/restructuredtext"
    },
    "source": [
-    "### Building color palettes with `color_palette`\n",
+    "### Building color palettes with `color_palette()`\n",
     "\n",
-    "The most important function for working with discrete color palettes is `color_palette`. This function provides an interface to many (though not all) of the possible ways you can generate colors in seaborn, and it's used internally by any function that has a ``palette`` argument (and in some cases for a ``color`` argument when multiple colors are needed).\n",
+    "The most important function for working with discrete color palettes is `color_palette()`. This function provides an interface to many (though not all) of the possible ways you can generate colors in seaborn, and it's used internally by any function that has a ``palette`` argument (and in some cases for a ``color`` argument when multiple colors are needed).\n",
     "\n",
-    "`color_palette` will accept the name of any seaborn palette or matplotlib colormap (except ``jet``, which you should never use). It can also take a list of colors specified in any valid matplotlib format (RGB tuples, hex color codes, or HTML color names). The return value is always a list of RGB tuples.\n",
+    "`color_palette()` will accept the name of any seaborn palette or matplotlib colormap (except ``jet``, which you should never use). It can also take a list of colors specified in any valid matplotlib format (RGB tuples, hex color codes, or HTML color names). The return value is always a list of RGB tuples.\n",
     "\n",
-    "Finally, calling `color_palette` with no arguments will return the current default color cycle.\n",
+    "Finally, calling `color_palette()` with no arguments will return the current default color cycle.\n",
     "\n",
-    "A corresponding function, `set_palette`, takes the same arguments and will set the default color cycle for all plots. You can also use `color_palette` in a ``with`` statement to temporarily change the default palette (see below `palette_contexts`).\n",
+    "A corresponding function, `set_palette()`, takes the same arguments and will set the default color cycle for all plots. You can also use `color_palette()` in a ``with`` statement to temporarily change the default palette (see below).\n",
     "\n",
-    "It is generally not possible to know what kind of color palette or colormap is best for a set of data without knowing about the characteristics of the data. Following that, we'll break up the different ways to use `color_palette` and other seaborn palette functions by the three general kinds of color palettes: *qualitative*, *sequential*, and *diverging*."
+    "It is generally not possible to know what kind of color palette or colormap is best for a set of data without knowing about the characteristics of the data. Following that, we'll break up the different ways to use `color_palette()` and other seaborn palette functions by the three general kinds of color palettes: *qualitative*, *sequential*, and *diverging*."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Qualitative color palettes\n",
+    "## Qualitative color palettes\n",
     "\n",
     "Qualitative (or categorical) palettes are best when you want to distinguish discrete chunks of data that do not have an inherent ordering.\n",
     "\n",
@@ -556,7 +523,7 @@
    "source": [
     "There are six variations of the default theme, called ``deep``, ``muted``, ``pastel``, ``bright``, ``dark``, and ``colorblind``.\n",
     "\n",
-    "#### Using circular color systems\n",
+    "### Using circular color systems\n",
     "\n",
     "When you have more than six categories to distinguish, the easiest thing is to draw evenly-spaced colors in a circular color space (such that the hue changes which keeping the brightness and saturation constant). This is what most seaborn functions default to when they need to use more colors than are currently set in the default color cycle.\n",
     "\n",
@@ -578,7 +545,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There is also the `hls_palette` function that lets you control the lightness and saturation of the colors."
+    "There is also the `hls_palette()` function that lets you control the lightness and saturation of the colors."
    ]
   },
   {
@@ -618,9 +585,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There is similarly a function called `husl_palette` that provides a more flexible interface to this system.\n",
+    "There is similarly a function called `husl_palette()` that provides a more flexible interface to this system.\n",
     "\n",
-    "#### Using categorical Color Brewer palettes\n",
+    "### Using categorical Color Brewer palettes\n",
     "\n",
     "Another source of visually pleasing categorical palettes comes from the [Color Brewer](http://colorbrewer2.org/) tool (which also has sequential and diverging palettes, as we'll see below). These also exist as matplotlib colormaps, but they are not handled properly. In seaborn, when you ask for a qualitative Color Brewer palette, you'll always get the discrete colors, but this means that at a certain point they will begin to cycle.\n",
     "\n",
@@ -653,9 +620,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To help you choose palettes from the Color Brewer library, there is the `choose_colorbrewer_palette` function. This function, which must be used in an IPython notebook, will launch an interactive widget that lets you browse the various options and tweak their parameters.\n",
+    "To help you choose palettes from the Color Brewer library, there is the `choose_colorbrewer_palette()` function. This function, which must be used in an IPython notebook, will launch an interactive widget that lets you browse the various options and tweak their parameters.\n",
     "\n",
-    "Of course, you might just want to use a set of colors you particularly like together. Because `color_palette` accepts a list of colors, this is easy to do."
+    "Of course, you might just want to use a set of colors you particularly like together. Because `color_palette()` accepts a list of colors, this is easy to do."
    ]
   },
   {
@@ -674,7 +641,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Using named colors from the xkcd color survey\n",
+    "### Using named colors from the xkcd color survey\n",
     "\n",
     "A while back, [xkcd](http://xkcd.com/) ran a [crowdsourced effort](http://blog.xkcd.com/2010/05/03/color-survey-results/) to name random RGB colors. This produced a set of [954 named colors](http://xkcd.com/color/rgb/), which you can now reference in seaborn using the ``xkcd_rgb`` dictionary:"
    ]
@@ -696,7 +663,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you want to spend some time picking colors, this [interactive visualization](http://www.luminoso.com/colors/) may be useful. In addition to pulling out single colors from the ``xkcd_rgb`` dictionary, you can also pass a list of names to the `xkcd_palette` function."
+    "If you want to spend some time picking colors, this [interactive visualization](http://www.luminoso.com/colors/) may be useful. In addition to pulling out single colors from the ``xkcd_rgb`` dictionary, you can also pass a list of names to the `xkcd_palette()` function."
    ]
   },
   {
@@ -717,7 +684,7 @@
    "source": [
     "### Sequential color palettes\n",
     "\n",
-    "The second major class of color palettes is called \"sequential\". This kind of color mapping is appropriate when data range from relatively low or unintersting values to relatively high or interesting values. Although there are cases where you will want discrete colors in a sequential palette, it's more common to use them as a colormap in functions like `kdeplot` or `corrplot` (along with similar matplotlib functions).\n",
+    "The second major class of color palettes is called \"sequential\". This kind of color mapping is appropriate when data range from relatively low or unintersting values to relatively high or interesting values. Although there are cases where you will want discrete colors in a sequential palette, it's more common to use them as a colormap in functions like `kdeplot()` or `corrplot()` (along with similar matplotlib functions).\n",
     "\n",
     "It's common to see colormaps like ``jet`` (or other rainbow palettes) used in this case, becuase the range of hues gives the impression of providing additional information about the data. However, colormaps with large hue shifts tend to introduce discontinuities that don't exist in the data, and our visual system isn't able to naturally map the rainbow to quantitative distinctions like \"high\" or \"low\". The result is that these visualizations end up being more like a puzzle, and they obscure patterns in the data rather than revealing them. The jet palette is [particularly bad](http://abandonmatlab.wordpress.com/2011/05/07/lets-talk-colormaps/) because the brightest colors, yellow and cyan, are used for intermediate data values. This has the effect of emphasizing uninteresting (and arbitrary) values while demphasizing the extremes.\n",
     "\n",
@@ -777,7 +744,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Remember that you may want to use the `choose_colorbrewer_palette` function to play with the various options, and you can set the ``as_cmap`` argument to ``True`` if you want the return value to be a colormap object that you can pass to seaborn or matplotlib functions."
+    "Remember that you may want to use the `choose_colorbrewer_palette()` function to play with the various options, and you can set the ``as_cmap`` argument to ``True`` if you want the return value to be a colormap object that you can pass to seaborn or matplotlib functions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Documentación de la función\n",
+    "choose_colorbrewer_palette()"
    ]
   },
   {
@@ -786,7 +765,7 @@
     "raw_mimetype": "text/restructuredtext"
    },
    "source": [
-    "#### Sequential palettes with `cubehelix_palette`\n",
+    "### Sequential palettes with `cubehelix_palette()`\n",
     "\n",
     "The [cubehelix](http://www.mrao.cam.ac.uk/~dag/CUBEHELIX/) color palette system makes sequential palettes with a linear increase or decrease in brightness and some variation in hue. This means that the information in your colormap will be preserved when converted to black and white (for printing) or when viewed by a colorblind individual.\n",
     "\n",
