cambios menores en 5.2

--- a/Capitulo_5.2_Seaborn.ipynb
+++ b/Capitulo_5.2_Seaborn.ipynb
@@ -789,7 +789,7 @@
    "source": [
     "Seaborn adds an interface to the cubehelix *system* so that you can make a variety of palettes that all have a well-behaved linear brightness ramp.\n",
     "\n",
-    "The default palette returned by the seaborn `cubehelix_palette` function is a bit different from the matplotlib default in that it does not rotate as far around the hue wheel or cover as wide a range of intensities. It also reverses the order so that more important values are darker:"
+    "The default palette returned by the seaborn `cubehelix_palette()` function is a bit different from the matplotlib default in that it does not rotate as far around the hue wheel or cover as wide a range of intensities. It also reverses the order so that more important values are darker:"
    ]
   },
   {
@@ -807,7 +807,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Other arguments to `cubehelix_palette` control how the palette looks. The two main things you'll change are the ``start`` (a value between 0 and 3) and ``rot``, or number of rotations (an arbitrary value, but probably within -1 and 1),"
+    "Other arguments to `cubehelix_palette()` control how the palette looks. The two main things you'll change are the ``start`` (a value between 0 and 3) and ``rot``, or number of rotations (an arbitrary value, but probably within -1 and 1),"
    ]
   },
   {
@@ -863,16 +863,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To help select good palettes or colormaps using this system, you can use the `choose_cubehelix_palette` function in a notebook to launch an interactive app that will let you play with the different parameters. Pass ``as_cmap=True`` if you want the function to return a colormap (rather than a list) for use in function like ``hexbin``."
+    "To help select good palettes or colormaps using this system, you can use the `choose_cubehelix_palette()` function in a notebook to launch an interactive app that will let you play with the different parameters. Pass ``as_cmap=True`` if you want the function to return a colormap (rather than a list) for use in function like ``hexbin``."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Custom sequential palettes with `light_palette` and `dark_palette`\n",
+    "### Custom sequential palettes with `light_palette()` and `dark_palette()`\n",
     "\n",
-    "For a simpler interface to custom sequential palettes, you can use `light_palette` or `dark_palette`, which are both seeded with a single color and produce a palette that ramps either from light or dark desaturated values to that color. These functions are also accompanied by the `choose_light_palette` and `choose_dark_palette` functions that launch interactive widgets to create these palettes."
+    "For a simpler interface to custom sequential palettes, you can use `light_palette()` or `dark_palette()`, which are both seeded with a single color and produce a palette that ramps either from light or dark desaturated values to that color. These functions are also accompanied by the `choose_light_palette()` and `choose_dark_palette()` functions that launch interactive widgets to create these palettes."
    ]
   },
   {
